manifests/tracee-ds.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tracee

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: tracee
    app.kubernetes.io/component: tracee
    app.kubernetes.io/part-of: tracee
  name: tracee
  namespace: tracee
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tracee
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tracee
      name: tracee
    spec:
      containers:
      - name: tracee
        image: docker.io/aquasec/tracee:full
        imagePullPolicy: IfNotPresent
        args:
          #- --webhook http://tracee-webhook:2801 --webhook-template ./templates/rawjson.tmpl --webhook-content-type application/json
          - --metrics
        securityContext:
          privileged: true
        ports:
        # must define the metrics port AND name it for prometheus podMonitor operator to find it
        - containerPort: 4466
          name: tracee-metrics
          protocol: TCP

        volumeMounts:
        - name: tmp-tracee
          mountPath: /tmp/tracee
        - name: etc-os-release
          mountPath: /etc/os-release-host
          readOnly: true

        - name: usr-src
          mountPath: /usr/src
          readOnly: true

        - name: lib-modules
          mountPath: /lib/modules
          readOnly: true

        - name: rules
          mountPath: /tracee/rules
          readOnly: true

        resources:
          limits:
            cpu: 500m
            memory: 300Mi
          requests:
            cpu: 350m
            memory: 50Mi
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - effect: NoExecute
          operator: Exists
      volumes:
      - hostPath:
          path: /tmp/tracee
        name: tmp-tracee

      - hostPath:
          path: /etc/os-release
        name: etc-os-release

      - hostPath: 
          path: /usr/src
        name: usr-src

      - hostPath: 
          path: 
            /lib/modules
        name: lib-modules
      
      - hostPath: 
          path: 
            /vagrant/tracee_rules
        name: rules
