manifests/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules:
  - host: graf.k8s-ingest.homelan.local
    http:
      paths:
      - backend:
          service:
            name: prom-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: prom.k8s-ingest.homelan.local
    http:
      paths:
      - backend:
          service:
            name: prom-kube-prometheus-stack-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
  - host: alert.k8s-ingest.homelan.local
    http:
      paths:
      - backend:
          service:
            name: prom-kube-prometheus-stack-alertmanager
            port:
              number: 9093
        path: /
        pathType: Prefix
